--- a/resource/deck.html
+++ b/resource/deck.html
@@ -15,6 +15,7 @@
         <!-- Slippy theme (feel free to change it) -->
         <link type="text/css" rel="stylesheet" href="http://slides.seld.be/slippy-pure.css"/>
         <style>
+            .slideContent { padding:0; margin-left: -10px !important; }
             %s
         </style>
     </head>
